# storiesviewer

./: .gitignore  README.md
storiesviewer_backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
storiesviewer_backend/src/storiesviewer_backend/: .dockerignore  Dockerfile  config.py  docker-compose.yml  main.py  model.py
storiesviewer_backend/src/storiesviewer_backend/database/: storage_factory.py  storage_interface.py  storage_mongodb.py
storiesviewer_backend/src/storiesviewer_backend/restAPI/: rest_factory.py  rest_fastapi.py  rest_interface.py
storiesviewer_frontend/: package-lock.json  package.json
