[project]
name = "storiesviewer-backend"
version = "0.1.0"
description = ""
authors = [
    { name = "fjperezpujalte", email = "franciscojavierperezpujalte@gmail.com" }
]

requires-python = ">=3.13" 


[tool.poetry]
name = "storiesviewer_backend"
readme = "README.md"
version = "0.1.0"
description = "Backend of storiesviewer app"
packages = [{ include = "storiesviewer_backend", from = "src" }]

[tool.poetry.dependencies]
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
motor = "3.3.2"
pymongo = "4.6.0"

[poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
black = "^24.0"
ruff = "^0.4.0"
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
